Vet Clinic Project - Week 7/8: Complete database integration with CRUD operations
- Added PostgreSQL database connection
- Created DAO classes for Owner, Pet, Veterinarian
- Implemented full CRUD operations
- Added menu system with database integration
- Fixed validation and error handling