@@ -1,16 +1,10 @@
 package model;
 
 public class Validating {
-    public static boolean isNumber(String input){
+
+    public static boolean isNumber(String input) {
         if (input == null || input.isBlank()) return false;
-
-        char[] chars = input.toCharArray();
-        for (int i = 0; i < chars.length; i++) {
-            char c = chars[i];
-
-            if (i == 0 && c == '+') {
-                continue;
-            }
+        for (char c : input.toCharArray()) {
             if (!Character.isDigit(c)) {
                 return false;
             }
@@ -18,7 +12,7 @@ public class Validating {
         return true;
     }
 
-    public static boolean isValidStr(String input){
-        return input != null && !input.isBlank();
+    public static boolean isValidStr(String input) {
+        return input != null && !input.trim().isEmpty();
     }
 }
